<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/buildmodel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <RadioGroup
            android:id="@+id/coap_endpoint_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edittext"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/coap_helloworld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_step_half"
                android:layout_marginTop="@dimen/margin_step_half"
                android:text="@string/helloworld"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/coap_sync_dump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_step_half"
                android:layout_marginTop="@dimen/margin_step_half"
                android:text="@string/sync_dump"/>
        </RadioGroup>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Lwip Blast"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/gattlink_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor='@android:color/black'
            android:text="Gattlink Status: "
            />

        <TextView
            android:id="@+id/handshake_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor='@android:color/black'
            android:text="Handshake Status: "
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/mtu_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor='@android:color/black'
            android:visibility="gone" />

        <TextView
            android:id="@+id/coap_response_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor='@android:color/black'
            android:visibility="gone" />

        <TextView
            android:id="@+id/rxtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:maxHeight="120dp"
            android:maxLines="5"
            android:padding="8dp"
            android:gravity="bottom"
            android:scrollbars="vertical"
            android:textColor='@android:color/white'
            android:typeface="monospace"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/central_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/gg_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_step_2x"
            android:layout_gravity="center"
            android:text="@string/version"/>

        <Button
            android:id="@+id/link_controller_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_controller_setup" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slow_logs_toggle"
            android:text="@string/enable_slow_logging" />

        <Switch
            android:id="@+id/deviceLinking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Companion device linking"
            android:visibility="gone" />

        <Switch
            android:id="@+id/wakelock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wake lock" />
    </LinearLayout>

</LinearLayout>
